@@ -118,6 +118,9 @@ version 2.73
 	    Check IPv4-mapped IPv6 addresses when --stop-rebind
 	    is active. Thanks to Jordan Milne for spotting this.
 
+	    Allow DHCPv4 options T1 and T2 to be set using --dhcp-option.
+	    Thanks to Kevin Benton for patches and work on this.
+
 	
 version 2.72
             Add ra-advrouter mode, for RFC-3775 mobile IPv6 support.
